<resources>
    <string name="app_name">Bachao</string>
    <string name="bachao">Bachao</string>
    <string name="calls_are_recorded">Calls are recorded</string>
    <string name="hold_on">Hold On</string>
    <string name="speakerphone">Speakerphone</string>
    <string name="mute">Mute</string>
    <string name="keyboard">Keyboard</string>
    <string name="moved_on">Moved On</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="zd8api2adi">ZD8API2ADI</string>
    <string name="mr_a">Mr A</string>
    <string name="help_line">Help Line</string>
    <string name="submit">Submit</string>
    <string name="report_a_rape">Report a Rape</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="tell_your_story">Tell Your Story</string>

    <string name="network_unavailable">Network connection is not available</string>
    <string name="location_unavailable">Location service is not enabled</string>
    <string name="network_location_unavailable">Network connection or location service is not enabled</string>
    <string name="learn">Learn</string>
    <string name="help_1331">Help 1331</string>
    <string name="rape_alert">Rape Alert</string>
    <string name="mark_as_safe">Mark As Safe</string>


</resources>