<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linear_main_match_match_vertical"
    android:background="@color/cGray"
    tools:context=".ReportRapeActivity">

    <RelativeLayout
        android:id="@+id/rlToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/ic_assessment_report" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:text="@string/report_a_rape"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/cvSubmit"
        app:layout_constraintEnd_toEndOf="@id/rlToolbar"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="@id/rlToolbar"
        app:layout_constraintTop_toBottomOf="@+id/rlToolbar"
        app:layout_constraintWidth_percent="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_et_15dp"
                android:hint="@string/name"
                android:inputType="textNoSuggestions"
                android:maxLength="100"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/rlLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_et_15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="15dp"
                    android:text="@string/location"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/ic_location" />

            </RelativeLayout>

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_et_15dp"
                android:gravity="start"
                android:hint="@string/description"
                android:inputType="textMultiLine|textNoSuggestions"
                android:maxLength="5000"
                android:minHeight="300dp"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorAccent"
        app:cardCornerRadius="15dp"
        app:cardElevation="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".999"
        app:layout_constraintWidth_percent="0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>