<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linear_main_match_match_vertical"
    tools:context=".MapsActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/rlToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_assessment_report" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_et_15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="25dp"
            android:paddingBottom="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_play" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/learn"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:weightSum="2">

        <RelativeLayout
            android:id="@+id/rlAlert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/llAlert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_alert_15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="7dp"
                android:weightSum="1">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_alert" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:text="@string/rape_alert"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSafe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_green_15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="7dp"
                android:visibility="gone"
                android:weightSum="1">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_bookmark_safe" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:text="@string/mark_as_safe"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llHelp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_orange_15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="7dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="3dp"
                android:src="@drawable/ic_call"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="@string/help_1331"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
